# Wikiplex

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: personalization.jsonl  relevance.csv  relevance.dev.csv  relevance.train.csv
demos/: Deep Learning Factorization model.ipynb  IR_Encoder_Examples.ipynb  Image_Retrieval_Example.ipynb  Simple EM Example.ipynb  Week 2 - Simple TF-IDF Retrieval.ipynb
demos/pyterrier/: notebook1.ipynb  notebook2.ipynb  notebook3.1.ipynb
notebooks/: Interactive_Example.ipynb  bi_encoder_encode.ipynb  bi_encoder_query.ipynb  document_augmentation.ipynb  evaluation.ipynb  evaluation_archived.ipynb  fairness_in_search.ipynb  increasing_diversity.ipynb  personalization.ipynb  relevance_1.ipynb
src/: app.py  document_preprocessor.py  indexing.py  l2r.py  network_features.py  pipeline.py  ranker.py  relevance.py
src/web/: home.html
tests/: data_relevant.jsonl  multi_word_expressions_performance.txt  stopwords_performance.txt  test_document_preprocessor_public.py  test_indexing_public.py  test_l2r_public.py  test_metrics_public.py  test_network_features_public.py  test_performance.py  test_ranker_public.py  test_relevance_scorers_public.py  test_vector_ranker_public.py
tests/tmp-index-dir/: document_metadata.pkl  index  statistics.pkl  vocabulary.pkl
